--- a/SweetRandomName/Assembly-CSharp.csproj
+++ b/SweetRandomName/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\BackgroundScript.cs" />
      <Compile Include="Assets\Scripts\CameraMovingScript.cs" />
      <Compile Include="Assets\Scripts\Changable.cs" />
      <Compile Include="Assets\Scripts\DarkObject.cs" />
